public/stylesheets/style.css
body {
  font: 14px 'Red Hat Text', sans-serif;
  background-image: linear-gradient(to bottom right, rgb(127, 161, 187), rgb(39, 99, 148));
  min-height: 100vh;
}

a {
  color: #00B7FF;
}

h1 {
  color: rgb(32, 15, 15);
  font-family: 'Staatliches', cursive;
}

.btn {
  font: 25px 'Staatliches', cursive;
  background-color: black;
  border: none;
  float: right;
}

.btn:hover {
  background-color: rgb(73, 139, 192);
}

.jumbotron {
  background-color: rgb(241, 241, 241);
  width: 500px;
}

.container {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

